<resources>
    <string name="app_name">WGU</string>
    <string name="title_activity_edit_term">Title Activity Edit Term</string>

    <!--Navigation Menu-->
    <string name="title_edit_term">Edit This Term</string>
    <string name="title_new_course">+ New Course</string>
    <string name="title_edit_course">Edit This Course</string>
    <string name="title_new_assessment">+ New Assessment</string>
    <string name="title_edit_assessment">Edit This Assessment</string>
    <string name="title_new_term">+ New Term</string>
    <string name="title_list_terms">All Terms</string>
    <string name="title_term_detail">Term Details</string>
    <string name="title_course_detail">Course Details</string>
    <string name="title_return_course">Back to Course</string>
    <string name="title_new_note">Course Notes</string>


    <!--Home Screen-->
    <string name="home_header">Android App</string>
    <string name="home_subheader">Scheduler &amp; Progress Tracker</string>
    <string name="home_button">Get Started</string>

    <!--Edit Term-->
    <string name="hint_title">Title</string>
    <string name="hint_start">Start Date</string>
    <string name="hint_end">End Date</string>
    <string name="hint_set">Date Picker</string>

    <!--Edit Course-->
    <string name="hint_mentor">Mentor</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="status_1">Active</string>
    <string name="status_2">Completed</string>
    <string name="status_3">Dropped</string>

    <!--Edit Assessment-->
    <string name="hint_due">Due Date</string>
    <string name="hint_goal">Goal Date</string>
    <string name="hint_add_goal">Add New Goal Date</string>
    <string name="hint_notes">Notes</string>
    <string name="type_1">Objective</string>
    <string name="type_2">Performance</string>

    <!--List Item-->
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="due">Due:</string>

    <!--Edit Course-->
    <string name="set_alarm">Set Alarm</string>

</resources>
