<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCourse">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_course_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_course_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_title"
            android:inputType="text"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/input_layout_course_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_course_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_course_title">

        <TextView
            android:id="@+id/edit_course_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_start"
            android:inputType="date"
            android:paddingLeft="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/edit_btn_course_start"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/edit_course_start"
            android:layout_alignBottom="@id/edit_course_start"
            android:layout_alignParentRight="true"
            android:onClick="setDate"
            android:text="@string/hint_set" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_layout_course_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_course_mentor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_course_start">

        <TextView
            android:id="@+id/edit_course_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_end"
            android:inputType="date"
            android:paddingLeft="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/edit_btn_course_end"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/edit_course_end"
            android:layout_alignBottom="@id/edit_course_end"
            android:layout_alignParentRight="true"
            android:onClick="setDate"
            android:text="@string/hint_set" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_course_mentor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_course_phones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_course_end">

        <EditText
            android:id="@+id/edit_course_mentor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_mentor"
            android:inputType="text"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_course_phones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_course_emails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_course_mentor">

        <EditText
            android:id="@+id/edit_course_phones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_phone"
            android:inputType="text"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_course_emails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_course_phones">

        <EditText
            android:id="@+id/edit_course_emails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup android:id="@+id/edit_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_course_emails"
        >
        <RadioButton android:id="@+id/radio_status_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_status_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_2"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_status_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_3"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_cancel_course"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_red_dark"
        android:text="Cancel"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_status" />

    <Button
        android:id="@+id/btn_save_course"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_light"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel_course" />

</android.support.constraint.ConstraintLayout>