<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAssessment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_assessment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_assessment_due"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_assessment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_title"
            android:inputType="text"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/input_layout_assessment_due"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_assessment_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_assessment_title">

        <TextView
            android:id="@+id/edit_assessment_due"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_due"
            android:inputType="date"
            android:paddingLeft="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/edit_btn_assessment_due"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/edit_assessment_due"
            android:layout_alignBottom="@id/edit_assessment_due"
            android:layout_alignParentRight="true"
            android:onClick="setDate"
            android:text="@string/hint_set" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_layout_assessment_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/input_layout_assessment_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_assessment_due">

        <TextView
            android:id="@+id/edit_assessment_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_goal"
            android:inputType="date"
            android:paddingLeft="10dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/edit_btn_assessment_goal"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/edit_assessment_goal"
            android:layout_alignBottom="@id/edit_assessment_goal"
            android:layout_alignParentRight="true"
            android:onClick="setDate"
            android:text="@string/hint_set" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_assessment_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_assessment_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_assessment_goal">

        <EditText
            android:id="@+id/edit_assessment_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_notes"
            android:inputType="text"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup android:id="@+id/edit_assessment_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel_assessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_assessment_notes"
        >
        <RadioButton android:id="@+id/radio_type_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_1"
            android:onClick="onRadioButtonClicked2"/>
        <RadioButton android:id="@+id/radio_type_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_2"
            android:onClick="onRadioButtonClicked2"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_cancel_assessment"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_red_dark"
        android:text="Cancel"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_assessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_assessment_type" />

    <Button
        android:id="@+id/btn_save_assessment"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_light"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel_assessment" />

</android.support.constraint.ConstraintLayout>